CS2 doesn't need user login anymore

--- a/cs2/steamcmd/install.txt
+++ b/cs2/steamcmd/install.txt
@@ -2,6 +2,6 @@
 @NoPromptForPassword 1
 @sSteamCmdForcePlatformType linux
 force_install_dir /home/steamrt/cs2
-login <steamuser> <steampass> <steamguard>
+login anonymous
 app_update 730 validate
 quit
